Comment out media query for wider devices making the organism filter icons bigger. This could be tweaked I guess, but I think it looks fine without making them larger and solves to truncation issue.

--- a/client/css/_mobileOrganisms.scss
+++ b/client/css/_mobileOrganisms.scss
@@ -136,7 +136,7 @@
 	}
 }
 
-@media screen and (min-width: 768px) {
+/*@media screen and (min-width: 768px) {
 	.protocol-section.mobileOrganisms {
 		$newHeight: 95px;
 		.bar-subheader {
@@ -167,4 +167,4 @@
 			margin-left: 27px;
 		}
 	}
-}
+}*/
